--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "nativescript-asitsvideorecorder",
-	"version": "1.0.0",
-	"description": "Your awesome NativeScript plugin.",
+	"version": "1.0.5",
+	"description": "Nativescript 7 ASITS Camera Video Recorder",
 	"main": "asitsvideorecorder",
 	"typings": "index.d.ts",
 	"nativescript": {
@@ -18,7 +18,7 @@
 		"tsc": "npm i && tsc",
 		"build": "npm run tsc && npm run build.native",
 		"build.native": "node scripts/build-native.js",
-		"tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
+		"tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\" --exclude \"**/platforms/**\" --exclude \"**/typings/**\"",
 		"ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**' --exclude '**/platforms/**'",
 		"prepack": "npm run build.native",
 		"demo.ios": "npm i && cd ../demo && tns run ios",
@@ -37,8 +37,8 @@
 		"iOS"
 	],
 	"author": {
-		"name": "Your Name",
-		"email": "youremail@yourdomain.com"
+		"name": "Saurav Upadhyay",
+		"email": "saurav@asits.in"
 	},
 	"bugs": {
 		"url": "https://github.com/asits-india/asits-nativescript-video-recorder/issues"
@@ -47,11 +47,15 @@
 	"homepage": "https://github.com/asits-india/asits-nativescript-video-recorder",
 	"devDependencies": {
 		"@nativescript/core": "^7.0.13",
+		"@nativescript/types": "^7.0.4",
 		"typescript": "~4.0.0",
 		"prompt": "^1.0.0",
 		"rimraf": "^3.0.2",
 		"tslint": "^6.1.3",
-		"semver": "^7.3.4"
+		"semver": "^7.3.4",
+		"husky": "^4.3.6",
+		"lint-staged": "^10.5.3",
+		"prettier": "^2.2.1"
 	},
 	"dependencies": {
 		"nativescript-permissions": "^1.3.11"
